--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,7 +98,13 @@ add_subdirectory(tests/gtest)
 # Protocol library
 ############################################################################
 
+ADD_CUSTOM_COMMAND(
+  OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/include/opc/ua/protocol/object_ids.h
+  COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/node_ids_gen.py > ${CMAKE_CURRENT_SOURCE_DIR}/include/opc/ua/protocol/object_ids.h
+  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/protocol/nodeid.cpp)
+
 add_library(libopcuaprotocol STATIC
+  include/opc/ua/protocol/object_ids.h
   src/protocol/binary_attribute.cpp
   src/protocol/binary_data_value.cpp
   src/protocol/binary_endpoints.cpp
