Fixed build python with cmake after generating object_ids.h.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ else(WIN32)
     SET(OS_SUFFIX _lin)
 
     set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -std=c++11 -Wall -fPIC ") 
-    set(CMAKE_SHARED_LINKER_FLAGS "--no-undefined" )
+    #set(CMAKE_SHARED_LINKER_FLAGS "--no-undefined" )
 
     #FIIXME find_package stuff should also be used for winwdows!
 
