Added ability enable/disable python bindings in autotools.

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,12 +8,16 @@
 # $Date: $
 # $Revision: $
 
+if ENABLE_PYTHON
+SUBDIRS = . python
+endif
 
 #######################################################
 # list of binaries.
 #######################################################
 
 AUTOMAKE_OPTIONS = subdir-objects
+
 
 bin_PROGRAMS = opcuaserver opcua
 lib_LTLIBRARIES = libopcuaprotocol.la libopcuacore.la libopcuaserver.la libopcuaclient.la
