--- a/configure.ac
+++ b/configure.ac
@@ -31,6 +31,18 @@ AC_ARG_ENABLE([gcov],
               [
               ])
 
+AC_ARG_ENABLE([python-bindings],
+              [AS_HELP_STRING([--disable-python-bindings],[Enable support of coverage analize with gcov.])],
+              [
+		enable_python_bindings=no
+              ],
+              [
+		enable_python_bindings=yes
+              ])
+
+
+AM_CONDITIONAL([ENABLE_PYTHON], [test "x$enable_python_bindings" == "xyes"])
+
 AC_SUBST([GTEST_LIB], [-Wl,--whole-archive,$srcdir/tests/gtest/lib/.libs/libgtest.a,--no-whole-archive])
 AC_SUBST([GTEST_MAIN_LIB], [-Wl,--whole-archive,$srcdir/tests/gtest/lib/.libs/libgtest_main.a,--no-whole-archive])
 AC_SUBST([GTEST_INCLUDES], [-I$srcdir/tests/gtest/include])
@@ -45,6 +57,11 @@ AC_CHECK_HEADERS([unistd.h])
 #################################################################
 AC_CONFIG_SUBDIRS([tests/gtest])
 AC_CONFIG_SUBDIRS([tests/gmock])
+
+AS_IF([test "x$enable_python_bindings" = "xyes"], [
+	ac_configure_args="$ac_configure_args --with-opcuaserver"
+	AC_CONFIG_SUBDIRS([python])
+])
 
 #################################################################
 AC_CONFIG_FILES([debian/changelog])
