--- a/python/Makefile.am
+++ b/python/Makefile.am
@@ -1,9 +1,17 @@
+
 EXTRA_DIST = \
-  src/module.cpp \
+  src/py_opcua_enums.cpp \
+  src/py_opcua_enums.h \
+  src/py_opcua_helpers.h \
+  src/py_opcua_module.cpp \
+  src/py_opcua_subscriptionclient.cpp \
+  src/py_opcua_subscriptionclient.h \
+  src/py_opcua_variant.h \
   tests/Makefile \
   tests/setup.py \
   tests/test.py \
   tests/test_computer.cpp \
+  tests/test_highlevel.py \
   Makefile.am \
   Makefile.in \
   setup.py
@@ -15,14 +23,14 @@ TEST_VARS = $(opcua_paths) LD_LIBRARY_PATH=$(libraries_path) PYTHONPATH=$(shell 
 
 all:
 	echo OPCUASERVER_ROOT=$(OPCUASERVER_ROOT)
-	$(opcua_paths) python setup.py build
+	$(opcua_paths) python $(srcdir)/setup.py build
 
 #	$(opcua_paths) $(MAKE) -C tests check
 check:
-	$(TEST_VARS) python ./tests/test_highlevel.py
+	$(TEST_VARS) python $(srcdir)/tests/test_highlevel.py
 
 debug:
-	$(TEST_VARS) cgdb --args python ./tests/test_highlevel.py
+	$(TEST_VARS) cgdb --args python $(srcdir)/tests/test_highlevel.py
 	
 
 clean:
@@ -30,7 +38,7 @@ clean:
 	rm -rvf build dist
 
 python-dist:
-	$(opcua_paths) python setup.py bdist
+	$(opcua_paths) python $(srcdir)/setup.py bdist
 
 dist:
 
@@ -38,5 +46,5 @@ distclean: clean
 	rm -vf Makefile
 
 install: python-dist
-	$(opcua_paths)python setup.py install --prefix=$(prefix)
+	$(opcua_paths)python $(srcdir)/setup.py install --prefix=$(prefix)
 
