Installing gcc-4.8 at travic-ci.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
 language: cpp
-compiler: clang
+compiler: gcc
+
 before_install:
+  # We need this line to have g++4.8 available in apt
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
   - sudo apt-get install libboost-all-dev
-script: ./configure && make && make check
+
+install:
+  - sudo apt-get install -qq gcc-4.8 g++-4.8 
+  # We want to compile with g++ 4.8 when rather than the default g++
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
+
+script: autoreconf -f -i && ./configure && make && make check
 
