--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,16 @@ compiler: gcc
 before_install:
   # We need this line to have g++4.8 available in apt
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo add-apt-repository -y ppa:boost-latest/ppa
   - sudo apt-get update -qq
-  - sudo apt-get install libboost-all-dev
 
 install:
+  - sudo apt-get install libboost1.54-all-dev -qq
+  - sudo apt-get install libboost-python1.54-dev -qq
   - sudo apt-get install -qq gcc-4.8 g++-4.8 
   # We want to compile with g++ 4.8 when rather than the default g++
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90
 
 script: autoreconf -f -i && ./configure && make && make check
 
