--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
   - sudo apt-get install libboost1.54-all-dev -qq
   - sudo apt-get install libboost-python1.54-dev -qq
   - sudo apt-get install -qq gcc-4.8 g++-4.8 
+  - sudo apt-get install libcppunit-dev
   # We want to compile with g++ 4.8 when rather than the default g++
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90
