--- a/Makefile.am
+++ b/Makefile.am
@@ -197,8 +197,8 @@ test_opcuaserver_LDFLAGS =  -ldl -lpthread $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOC
 ####################################################
 
 
-include/opc/ua/protocol/object_ids.h: NodeIds.csv node_ids_gen.py
-	python $(top_srcdir)/node_ids_gen.py > $(top_srcdir)/include/opc/ua/protocol/object_ids.h
+include/opc/ua/protocol/object_ids.h: schema/NodeIds.csv schema/codegen.py
+	python $(top_srcdir)/schema/codegen.py cxx object_ids > $(top_srcdir)/include/opc/ua/protocol/object_ids.h
 
 binaryinclude_HEADERS = \
   include/opc/ua/protocol/binary/common.h \
