--- a/python/Makefile.in
+++ b/python/Makefile.in
@@ -202,6 +202,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 EXTRA_DIST = \
   src/py_opcua_enums.cpp \
+  src/py_opcua_enums_ObjectID.cpp \
   src/py_opcua_enums.h \
   src/py_opcua_helpers.h \
   src/py_opcua_module.cpp \
@@ -541,8 +542,11 @@ uninstall-am:
 	uninstall-am
 
 
+src/py_opcua_enums_ObjectID.cpp: $(OPCUA_SERVER_PATH)/schema/NodeIds.csv
+	python $(OPCUA_SERVER_PATH)/schema/codegen.py py object_ids > $@
+
 all:
-	echo OPCUASERVER_ROOT=$(OPCUASERVER_ROOT)
+	@echo OPCUASERVER_ROOT=$(OPCUASERVER_ROOT)
 	$(opcua_paths) python $(srcdir)/setup.py build
 
 #	$(opcua_paths) $(MAKE) -C tests check
@@ -556,7 +560,7 @@ clean:
 	$(MAKE) -C tests clean
 	rm -rvf build dist
 
-python-dist:
+python-dist: src/py_opcua_enums_ObjectID.cpp 
 	$(opcua_paths) python $(srcdir)/setup.py bdist
 
 dist:
@@ -565,7 +569,7 @@ distclean: clean
 	rm -vf Makefile
 
 install: python-dist
-	$(opcua_paths)python $(srcdir)/setup.py install --prefix=$(prefix)
+	$(opcua_paths) python $(srcdir)/setup.py install --prefix=$(prefix)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
