--- a/python/Makefile.in
+++ b/python/Makefile.in
@@ -203,6 +203,7 @@ top_srcdir = @top_srcdir@
 EXTRA_DIST = \
   src/py_opcua_enums.cpp \
   src/py_opcua_enums_ObjectID.cpp \
+  src/py_opcua_enums_StatusCode.cpp \
   src/py_opcua_enums.h \
   src/py_opcua_helpers.h \
   src/py_opcua_module.cpp \
@@ -545,7 +546,10 @@ uninstall-am:
 src/py_opcua_enums_ObjectID.cpp: $(OPCUA_SERVER_PATH)/schema/NodeIds.csv
 	python $(OPCUA_SERVER_PATH)/schema/codegen.py py object_ids > $@
 
-all:
+src/py_opcua_enums_StatusCode.cpp: $(OPCUA_SERVER_PATH)/schema/StatusCode.csv
+	python $(OPCUA_SERVER_PATH)/schema/codegen.py py status_codes > $@
+
+all: src/py_opcua_enums_ObjectID.cpp  src/py_opcua_enums_StatusCode.cpp
 	@echo OPCUASERVER_ROOT=$(OPCUASERVER_ROOT)
 	$(opcua_paths) python $(srcdir)/setup.py build
 
@@ -560,7 +564,7 @@ clean:
 	$(MAKE) -C tests clean
 	rm -rvf build dist
 
-python-dist: src/py_opcua_enums_ObjectID.cpp 
+python-dist: src/py_opcua_enums_ObjectID.cpp  src/py_opcua_enums_StatusCode.cpp
 	$(opcua_paths) python $(srcdir)/setup.py bdist
 
 dist:
