--- a/python/Makefile.am
+++ b/python/Makefile.am
@@ -22,13 +22,21 @@ opcua_paths = OPCUA_SERVER_PATH=$(OPCUA_SERVER_PATH)
 libraries_path =$(OPCUA_SERVER_PATH)/lib:$(OPCUA_SERVER_PATH)/.libs
 TEST_VARS = $(opcua_paths) LD_LIBRARY_PATH=$(libraries_path) PYTHONPATH=$(shell find ./build -name \*.so -exec dirname {} + )
 
+CODEGENS =
+CODEGENS += src/py_opcua_enums_ObjectID.cpp
+CODEGENS += src/py_opcua_enums_StatusCode.cpp
+CODEGENS += src/py_opcua_enums_AttributeID.cpp
+
 src/py_opcua_enums_ObjectID.cpp: $(OPCUA_SERVER_PATH)/schema/NodeIds.csv
 	python $(OPCUA_SERVER_PATH)/schema/codegen.py py object_ids > $@
 
 src/py_opcua_enums_StatusCode.cpp: $(OPCUA_SERVER_PATH)/schema/StatusCode.csv
 	python $(OPCUA_SERVER_PATH)/schema/codegen.py py status_codes > $@
 
-all: src/py_opcua_enums_ObjectID.cpp  src/py_opcua_enums_StatusCode.cpp
+src/py_opcua_enums_AttributeID.cpp: $(OPCUA_SERVER_PATH)/schema/AttributeIds.csv
+	python $(OPCUA_SERVER_PATH)/schema/codegen.py py attribute_ids > $@
+
+all: ${CODEGENS}
 	@echo OPCUASERVER_ROOT=$(OPCUASERVER_ROOT)
 	$(opcua_paths) python $(srcdir)/setup.py build
 
@@ -43,7 +51,7 @@ clean:
 	$(MAKE) -C tests clean
 	rm -rvf build dist
 
-python-dist: src/py_opcua_enums_ObjectID.cpp  src/py_opcua_enums_StatusCode.cpp
+python-dist: ${CODEGENS}
 	$(opcua_paths) python $(srcdir)/setup.py bdist
 
 dist:
