--- a/python/Makefile.in
+++ b/python/Makefile.in
@@ -222,6 +222,9 @@ EXTRA_DIST = \
 opcua_paths = OPCUA_SERVER_PATH=$(OPCUA_SERVER_PATH)
 libraries_path = $(OPCUA_SERVER_PATH)/lib:$(OPCUA_SERVER_PATH)/.libs
 TEST_VARS = $(opcua_paths) LD_LIBRARY_PATH=$(libraries_path) PYTHONPATH=$(shell find ./build -name \*.so -exec dirname {} + )
+CODEGENS = src/py_opcua_enums_ObjectID.cpp \
+	src/py_opcua_enums_StatusCode.cpp \
+	src/py_opcua_enums_AttributeID.cpp
 all: all-am
 
 .SUFFIXES:
@@ -549,7 +552,10 @@ src/py_opcua_enums_ObjectID.cpp: $(OPCUA_SERVER_PATH)/schema/NodeIds.csv
 src/py_opcua_enums_StatusCode.cpp: $(OPCUA_SERVER_PATH)/schema/StatusCode.csv
 	python $(OPCUA_SERVER_PATH)/schema/codegen.py py status_codes > $@
 
-all: src/py_opcua_enums_ObjectID.cpp  src/py_opcua_enums_StatusCode.cpp
+src/py_opcua_enums_AttributeID.cpp: $(OPCUA_SERVER_PATH)/schema/AttributeIds.csv
+	python $(OPCUA_SERVER_PATH)/schema/codegen.py py attribute_ids > $@
+
+all: ${CODEGENS}
 	@echo OPCUASERVER_ROOT=$(OPCUASERVER_ROOT)
 	$(opcua_paths) python $(srcdir)/setup.py build
 
@@ -564,7 +570,7 @@ clean:
 	$(MAKE) -C tests clean
 	rm -rvf build dist
 
-python-dist: src/py_opcua_enums_ObjectID.cpp  src/py_opcua_enums_StatusCode.cpp
+python-dist: ${CODEGENS}
 	$(opcua_paths) python $(srcdir)/setup.py bdist
 
 dist:
