fix cmake build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ else(WIN32)
     SET(OS_SUFFIX _lin)
 
     set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -std=c++11 -Wall -fPIC ") 
-    #set(CMAKE_SHARED_LINKER_FLAGS "--no-undefined" )
+    set(CMAKE_SHARED_LINKER_FLAGS "--no-undefined" )
 
     #FIIXME find_package stuff should also be used for winwdows!
 
@@ -100,8 +100,9 @@ add_subdirectory(tests/gtest)
 
 ADD_CUSTOM_COMMAND(
   OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/include/opc/ua/protocol/object_ids.h
-  COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/schema/codegen.py cxx object_ids > ${CMAKE_CURRENT_SOURCE_DIR}/include/opc/ua/protocol/object_ids.h
-  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/NodeIds.csv)
+  COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/schemas/codegen.py cxx object_ids > ${CMAKE_CURRENT_SOURCE_DIR}/include/opc/ua/protocol/object_ids.h
+  #DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/NodeIds.csv
+  )
 
 add_library(libopcuaprotocol STATIC
   include/opc/ua/protocol/object_ids.h
