--- a/Makefile.am
+++ b/Makefile.am
@@ -238,6 +238,7 @@ protocolinclude_HEADERS = \
   include/opc/ua/protocol/guid.h \
   include/opc/ua/protocol/input_from_buffer.h \
   include/opc/ua/protocol/message_identifiers.h \
+  include/opc/ua/protocol/method.h \
   include/opc/ua/protocol/monitored_items.h \
   include/opc/ua/protocol/node_management.h \
   include/opc/ua/protocol/nodeid.h \
@@ -266,6 +267,7 @@ libopcuaprotocol_la_SOURCES = \
   src/protocol/binary_data_value.cpp \
   src/protocol/binary_endpoints.cpp \
   src/protocol/binary_messages.cpp \
+  src/protocol/binary_method.cpp \
   src/protocol/binary_raw_size.cpp \
   src/protocol/binary_session.cpp \
   src/protocol/binary_view.cpp \
@@ -322,6 +324,7 @@ opcuainclude_HEADERS = \
 servicesinclude_HEADERS = \
   include/opc/ua/services/attributes.h \
   include/opc/ua/services/endpoints.h \
+  include/opc/ua/services/method.h \
   include/opc/ua/services/node_management.h \
   include/opc/ua/services/services.h \
   include/opc/ua/services/subscriptions.h \
