linux fix in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ else(WIN32)
 
     set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -std=c++11 -Wall -fPIC ") 
     SET (CMAKE_SHARED_LINKER_FLAGS ${CMAKE_SHARED_LINKER_FLAGS_INIT} $ENV{LDFLAGS})
-    #set(CMAKE_SHARED_LINKER_FLAGS "--no-undefined" )
+    set(CMAKE_SHARED_LINKER_FLAGS "--no-undefined" )
 
     find_package(LibXml2 REQUIRED) 
     message(STATUS "LibXML2 INCLUDE DIR IS: " ${LIBXML2_INCLUDE_DIR})
@@ -252,7 +252,11 @@ if (BUILD_CLIENT)
     )
 
     target_compile_options(opcuaclient PUBLIC ${STATIC_LIBRARY_CXX_FLAGS})
-    target_link_libraries(opcuaclient opcuacore ${ADDITIONAL_LINK_LIBRARIES})
+    target_link_libraries(opcuaclient 
+        opcuacore 
+        ${ADDITIONAL_LINK_LIBRARIES} 
+        ${Boost_LIBRARIES}
+        )
 
     #tests/client/binary_handshake.cpp
     #tests/client/common.h
@@ -276,10 +280,10 @@ if (BUILD_CLIENT)
     
 
     target_link_libraries(opcuaclientapp
-    ${ADDITIONAL_LINK_LIBRARIES}
-    opcuaprotocol
-    opcuacore
-	Ws2_32.lib
+        ${ADDITIONAL_LINK_LIBRARIES}
+        opcuaprotocol
+        opcuacore
+        ${Boost_LIBRARIES}
     )
 
     target_compile_options(opcuaclient PUBLIC ${EXECUTABLE_CXX_FLAGS})
@@ -406,6 +410,7 @@ if(BUILD_SERVER)
         opcuaprotocol
         opcuacore
         opcuaserver
+        ${Boost_LIBRARIES}
         )
     target_compile_options(opcuaserverapp PUBLIC ${EXECUTABLE_CXX_FLAGS})
 
@@ -446,6 +451,7 @@ if(BUILD_SERVER)
     opcuaprotocol
     opcuacore
     opcuaserver
+    ${Boost_LIBRARIES}
     )
 
     target_compile_options(example_server PUBLIC ${EXECUTABLE_CXX_FLAGS})
